Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33285

Assertion `m_table' failed in ha_perfschema::rnd_end on CHECKSUM TABLE

    XMLWordPrintable

Details

    Description

      Non-important issue at all, just logging so it can be added to filters. Extremely sporadic. Expect run times of 1h+ even with 200 threads repeating the SQL. Only one of the CHECKSUM TABLE statements is required, they can all fail with the given assertion.

      SET @@max_statement_time=0.0001;
      CHECKSUM TABLE performance_schema.rwlock_instances;
      CHECKSUM TABLE performance_schema.table_io_waits_summary_by_table;
      CHECKSUM TABLE performance_schema.users;
      CHECKSUM TABLE performance_schema.cond_instances;
      

      Leads to:

      11.4.0 57618265ad914824ce78108729829df13c75e224

      mariadbd: /test/bb-11.4-MDEV-7850_opt/storage/perfschema/ha_perfschema.cc:341: virtual int ha_perfschema::rnd_end(): Assertion `m_table' failed.
      

      Regrettably no full stack is available:

      11.4.0 57618265ad914824ce78108729829df13c75e224 (Optimized)

      Core was generated by `/test/MDEV-7850_MD161223-mariadb-11.4.0-linux-x86_64-opt/bin/mariadbd --no-defa'.
      Program terminated with signal SIGABRT, Aborted.
      #0  0x00001529ba6969fc in __pthread_mutex_lock_full (mutex=0x3541d3)
          at ./nptl/pthread_mutex_lock.c:577
      [Current thread is 1 (LWP 3490259)]
      (gdb) bt
      #0  0x00001529ba6969fc in __pthread_mutex_lock_full (mutex=0x3541d3) at ./nptl/pthread_mutex_lock.c:577
      #1  0x0000000000000000 in ?? ()
      

      However an earlier run captured the following frames:

      11.4.0 57618265ad914824ce78108729829df13c75e224 (Optimized)

      #1 ha_perfschema::rnd_end
      #2 ha_perfschema::rnd_end
      #3 handler::ha_rnd_end
      #4 mysql_checksum_table
      

      Attachments

        Issue Links

          Activity

            People

              svoj Sergey Vojtovich
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 50m
                  50m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.